--- a/index.html
+++ b/index.html
@@ -5,8 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume</title>
+    <link rel="stylesheet" href="./CSS/style.css">
 </head>
-<body>
-    
-</body>
+
+    <body>
+        <!--Header-->
+        <section id="head">
+            <div class="head main">
+               <div>
+                <h1>Hi there my name is Sibusiso Gamane</h1>
+               </div> 
+            </div>
+        </section>
+        <!--Header-->
+
+        <!--Experiance-->
+        <section id="Intro">
+            
+
+
+        </section>
+        <!--Experiance-->
+
+
+    </body>
 </html>
