Added the intro

--- a/index.html
+++ b/index.html
@@ -19,14 +19,17 @@
         </section>
         <!--Header-->
 
-        <!--Experiance-->
+        <!--Intro-->
         <section id="Intro">
-            
-
-
+            <div class="intro">
+                <h2>Introduction</h2>
+                <P>
+                   Hello my name is Sibusiso Gamane and I am a developer in training
+                </P>
+            </div>   
         </section>
-        <!--Experiance-->
+        <!--Intro-->
 
-
+        <!--Experience-->
     </body>
 </html>
