Added experience block

--- a/index.html
+++ b/index.html
@@ -31,5 +31,14 @@
         <!--Intro-->
 
         <!--Experience-->
+        <section id="Experience">
+            <div class="exp">
+                <h2>Experience</h2>
+                <p>
+                    Experience 
+                </p>
+            </div>
+        </section>
+        <!--Experience-->
     </body>
 </html>
