Changed experience into education

--- a/index.html
+++ b/index.html
@@ -32,26 +32,26 @@
                 <!--Intro-->
 
                 <!--Experience-->
-            <section id="Experience">
-                 <div class="exp">
-                    <h2>Experience</h2>
+            <section id="Education">
+                 <div class="edu">
+                    <h2>Education</h2>
                      <p>
                       my Experience Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia saepe est, debitis maiores optio laboriosam sed illo unde nesciunt labore?
                     </p>
 
-                    <div class="Jobs">
-                        <div class="job1">
-                            <h3>Job 1</h3>
+                    <div class="Subjects">
+                        <div class="sub1">
+                            <h3>Maths</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, repellendus. Suscipit odit illo, officiis vitae inventore in. Possimus tempore repudiandae quaerat numquam minus neque ipsa.</p>
                         </div>
                     
-                        <div class="job2">
-                            <h3>Job 2</h3>
+                        <div class="sub2">
+                            <h3>English</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, repellendus. Suscipit odit illo, officiis vitae inventore in. Possimus tempore repudiandae quaerat numquam minus neque ipsa.</p>
                         </div>
                     
-                        <div class="job3">
-                            <h3>Job 3</h3>
+                        <div class="sub3">
+                            <h3>Afrikaans</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, repellendus. Suscipit odit illo, officiis vitae inventore in. Possimus tempore repudiandae quaerat numquam minus neque ipsa.</p>
                         </div>
                     </div>
