Added Subjects to the education section

--- a/index.html
+++ b/index.html
@@ -31,33 +31,63 @@
             </section>
                 <!--Intro-->
 
-                <!--Experience-->
+                <!--Education-->
             <section id="Education">
                  <div class="edu">
                     <h2>Education</h2>
                      <p>
-                      my Experience Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia saepe est, debitis maiores optio laboriosam sed illo unde nesciunt labore?
+                        I have just recently completed high school and these are some of my subjects i did at school.
                     </p>
 
                     <div class="Subjects">
-                        <div class="sub1">
-                            <h3>Maths</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, repellendus. Suscipit odit illo, officiis vitae inventore in. Possimus tempore repudiandae quaerat numquam minus neque ipsa.</p>
+                        <div class="tpc sub1">
+                            <p>Maths</p>
                         </div>
                     
-                        <div class="sub2">
-                            <h3>English</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, repellendus. Suscipit odit illo, officiis vitae inventore in. Possimus tempore repudiandae quaerat numquam minus neque ipsa.</p>
+                        <div class="tpc sub2">
+                            <p>English</p>
                         </div>
-                    
-                        <div class="sub3">
-                            <h3>Afrikaans</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, repellendus. Suscipit odit illo, officiis vitae inventore in. Possimus tempore repudiandae quaerat numquam minus neque ipsa.</p>
+
+                        <div class="tpc sub3">
+                            <p>Afrikaans</p>
+                        </div>
+
+                        <div class="tpc sub4">
+                            <p>Life Sciences</p>
+                        </div>
+
+                        <div class="tpc sub5">
+                            <p>Physical Sciences</p>
+                        </div>
+
+                        <div class="tpc sub6">
+                            <p>Life Orientation</p>
+                        </div>
+
+                        <div class="tpc sub7">
+                            <p>Computer Applications Technology</p>
+                        </div>
+
+                        <div class="tpc sub8">
+                            <p>Information Technology</p>
                         </div>
                     </div>
                 </div>
             </section>
-                <!--Experience-->
+                <!--Education-->
+
+                <!--Interests-->
+
+            <section id="Interest">
+                <div class="Int">
+                    <h2>Interest</h2>
+
+
+                </div>
+            </section>
+
+             <!--Interests-->
+
         </main>
     </body>
 </html>
