Changed the text of subjects to pictures

--- a/index.html
+++ b/index.html
@@ -41,35 +41,42 @@
 
                     <div class="Subjects">
                         <div class="tpc sub1">
-                            <p>Maths</p>
+                            <img src="./images/Maths.jpeg" class="img">
                         </div>
                     
                         <div class="tpc sub2">
                             <p>English</p>
+                            <img src="./images/English.jpeg" class="img">
                         </div>
 
                         <div class="tpc sub3">
                             <p>Afrikaans</p>
+                            <img src="./images/Afrikaans.jpeg" class="img">
                         </div>
 
                         <div class="tpc sub4">
                             <p>Life Sciences</p>
+                            <img src="./images/Lifescience.jpeg" class="img">
                         </div>
 
                         <div class="tpc sub5">
                             <p>Physical Sciences</p>
+                            <img src="./images/physics.avif" class="img">
                         </div>
 
                         <div class="tpc sub6">
                             <p>Life Orientation</p>
+                            <img src="./images/lifeorientation.jpeg" class="img">
                         </div>
 
                         <div class="tpc sub7">
                             <p>Computer Applications Technology</p>
+                            <img src="./images/CAT.jpeg" class="img">
                         </div>
 
                         <div class="tpc sub8">
                             <p>Information Technology</p>
+                            <img src="./images/IT.jpeg" class="img">
                         </div>
                     </div>
                 </div>
@@ -79,11 +86,11 @@
                 <!--Interests-->
 
             <section id="Interest">
-                <div class="Int">
+                <article class="Int">
                     <h2>Interest</h2>
 
 
-                </div>
+                </article>
             </section>
 
              <!--Interests-->
