Edited education sector

--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
                 </article>
             </section>
 
-             <!--Interests-->
+             <!--Extra murals-->
+
 
         </main>
     </body>
