Added an extra mural section

--- a/index.html
+++ b/index.html
@@ -77,23 +77,33 @@
 
                         <div class="tpc sub8">
                             <p>Information Technology</p>
-                           
                         </div>
                     </div>
                 </div>
             </section>
                 <!--Education-->
 
-                <!--Interests-->
 
-            <section id="Interest">
-                <article class="Int">
-                    <h2>Interest</h2>
+                <!--Extra murals-->
 
+            <section id="extra">
+                <article class="ext">
+                    <h2>Extra murals and Awards</h2>
+                    <p>The extra curricular activities I used to do at school include</p>
 
+                    <div class="mural">
+                        <div class="act act1">Debating</div>
+                        <div class="act act2">Public speaking</div>
+                        <div class="act act3">Chess</div>
+                        <div class="act act4">Basketball</div>
+                    </div>
+                </article>
+
+                <article class="Awards">
+
+                
                 </article>
             </section>
-
              <!--Extra murals-->
 
 
