Added Award section

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header id="head">
                 <div class="head main">
                      <div>
-                    <h1>Hi there my name is Sibusiso Gamane</h1>
+                    <h1>Sibusiso Gamane</h1>
                     </div> 
                 </div>
         </header>
@@ -23,9 +23,9 @@
                 <!--Intro-->
             <section id="Intro">
                 <div class="intro">
-                    <h2>Introduction</h2>
+                    <!--<h2>Introduction</h2>-->
                     <P>
-                      Hello my name is Sibusiso Gamane and I am a developer in training
+                      Hello my name is Sibusiso Gamane and I am a developer in training. I just finished high school and I am currently on the track of discovery and growth.
                     </P>
                 </div>   
             </section>
@@ -92,21 +92,27 @@
                     <p>The extra curricular activities I used to do at school include</p>
 
                     <div class="mural">
-                        <div class="act act1">Debating</div>
-                        <div class="act act2">Public speaking</div>
-                        <div class="act act3">Chess</div>
-                        <div class="act act4">Basketball</div>
+                        <div class="act act1"><P>Debating</P></div>
+                        <div class="act act2"><p>Public speaking</p></div>
+                        <div class="act act3"><p>Chess</p></div>
+                        <div class="act act4"><p>Basketball</p></div>
                     </div>
                 </article>
-
+<!--Extra murals-->
+<!--Awards-->
                 <article class="Awards">
-
-                
+                    <h2>Awards</h2>
+                    <p>These are some of the awards i have recived across my schooling journey.</p>
+                    <div class="wins">
+                        <ul>
+                           <div class="award num1"><li>Highest in IT</li></div>
+                            <div class="award num2"><li>Top 10 in CAT</li></div>
+                            <div class="award num3"><li>Won gold in a writing competion</li></div>
+                         </ul> 
+                    </div>
                 </article>
+                <!--Awards-->
             </section>
-             <!--Extra murals-->
-
-
         </main>
     </body>
 </html>
