Added interest block

--- a/index.html
+++ b/index.html
@@ -118,11 +118,27 @@
       <section id="interests">
         <article class="Int">
           <h2>Interest</h2>
-          <div class="int"></div>
+          <div class="int">
+            <p>My interest include: </p>
+            <br>
+            <ul>
+                <li>Photography</li>
+                <li>Agriculture</li>
+                <li>Gaming</li>
+                <li>Reading</li>
+                <li>Coding</li>
+            </ul>
+          </div>
         </article>
       </section>
 
-      <footer></footer>
+      <footer>
+        <div class="contact">
+            <form>
+                
+            </form>
+        </div>
+      </footer>
     </main>
   </body>
 </html>
