--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <!--Header-->
     <header id="head">
-      <div class="head main">
+      <div class="head header">
         <div>
           <h1>Sibusiso Gamane</h1>
         </div>
@@ -134,8 +134,15 @@
 
       <footer>
         <div class="contact">
+            <h2>Contact me</h2>
             <form>
-                
+               <input type="text" class="input" placeholder="Name" >
+               <input type="text" class="input" placeholder="Surname" >
+               <input type="email" class="input" placeholder="Email"  required>
+               <input type="text" class="input" placeholder="Subject" >
+               <textarea type="text" class="area" placeholder="Enter your message"></textarea>
+               <br>
+                <input type="submit" class="btn">
             </form>
         </div>
       </footer>
