--- a/index.html
+++ b/index.html
@@ -144,6 +144,10 @@
                <br>
                 <input type="submit" class="btn">
             </form>
+
+            <div class="social">
+
+            </div>
         </div>
       </footer>
     </main>
