--- a/index.html
+++ b/index.html
@@ -8,148 +8,160 @@
     <link rel="stylesheet" href="./CSS/style.css" />
   </head>
 
+
   <body>
-    <!--Header-->
-    <header id="head">
-      <div class="head header">
-        <div>
-          <h1>Sibusiso Gamane</h1>
-        </div>
-      </div>
-    </header>
 
     <!--Header-->
-    <main>
-      <!--Intro-->
-      <section id="Intro">
-        <div class="intro">
-          <!--<h2>Introduction</h2>-->
-          <p>
-            Hello my name is Sibusiso Gamane and I am a developer in training. I
-            just finished high school and I am currently on the track of
-            discovery and growth.
-          </p>
-        </div>
-      </section>
-      <!--Intro-->
-
-      <!--Education-->
-      <section id="Education">
-        <div class="edu">
-          <h2>Education</h2>
-          <p>
-            I have just recently completed high school and these are some of my
-            subjects i did at school.
-          </p>
-
-          <div class="Subjects">
-            <div class="tpc sub1">
-              <p>Maths</p>
+        <header id="head">
+            <nav class="navbar">
+                <a href="#Education">Education</a>
+                <a href="#Experience">Experience</a>
+                <a href="#Skill">Skills</a>
+                <a href="#contact">Contact</a>
+            </nav>
+             <div class="head header">
+                 <h1>Sibusiso Gamane</h1>
+             </div>
+        </header>
+            
+      
+        <!--Header-->
+        <main>
+        <!--Intro-->
+        <section id="Intro">
+            <div class="intro">
+            <!--<h2>Introduction</h2>-->
+            <p>
+                Hello my name is Sibusiso Gamane and I am a developer in training. I
+                just finished high school and I am currently on the track of
+                discovery and growth.
+            </p>
             </div>
+        </section>
+        <!--Intro-->
 
-            <div class="tpc sub2">
-              <p>English</p>
+        <!--Education-->
+        <section id="Education">
+            <div class="edu">
+            <h2>Education</h2>
+            <p>
+                I have just recently completed high school and these are some of my
+                subjects i did at school.
+            </p>
+
+            <div class="Subjects">
+                <div class="tpc sub1">
+                <p>Maths</p>
+                </div>
+
+                <div class="tpc sub2">
+                <p>English</p>
+                </div>
+
+                <div class="tpc sub3">
+                <p>Afrikaans</p>
+                </div>
+
+                <div class="tpc sub4">
+                <p>Life Sciences</p>
+                </div>
+
+                <div class="tpc sub5">
+                <p>Physical Sciences</p>
+                </div>
+
+                <div class="tpc sub6">
+                <p>Life Orientation</p>
+                </div>
+
+                <div class="tpc sub7">
+                <p>Computer Applications Technology</p>
+                </div>
+
+                <div class="tpc sub8">
+                <p>Information Technology</p>
+                </div>
             </div>
-
-            <div class="tpc sub3">
-              <p>Afrikaans</p>
             </div>
+        </section>
+        <!--Education-->
 
-            <div class="tpc sub4">
-              <p>Life Sciences</p>
-            </div>
-
-            <div class="tpc sub5">
-              <p>Physical Sciences</p>
-            </div>
-
-            <div class="tpc sub6">
-              <p>Life Orientation</p>
-            </div>
-
-            <div class="tpc sub7">
-              <p>Computer Applications Technology</p>
-            </div>
-
-            <div class="tpc sub8">
-              <p>Information Technology</p>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!--Education-->
-
-      <!--Extra murals-->
-
-      <section id="extra">
-        <article class="ext">
-          <h2>Extra murals and Awards</h2>
-          <p>The extra curricular activities I used to do at school include</p>
-
-          <div class="mural">
-            <div class="act act1"><p>Debating</p></div>
-            <div class="act act2"><p>Public speaking</p></div>
-            <div class="act act3"><p>Chess</p></div>
-            <div class="act act4"><p>Basketball</p></div>
-          </div>
-        </article>
         <!--Extra murals-->
-        <!--Awards-->
-        <article class="Awards">
-          <h2>Awards</h2>
-          <p>
-            These are some of the awards i have recived across my schooling
-            journey.
-          </p>
-          <br />
-          <div class="wins">
-            <ul>
-              <div class="award num1"><li>Highest in IT</li></div>
-              <div class="award num2"><li>Top 10 in CAT</li></div>
-              <div class="award num3">
-                <li>Won gold in a writing competion</li>
-              </div>
-            </ul>
-          </div>
-        </article>
-        <!--Awards-->
-      </section>
 
-      <section id="interests">
-        <article class="Int">
-          <h2>Interest</h2>
-          <div class="int">
-            <p>My interest include: </p>
-            <br>
-            <ul>
+        <section id="extra">
+            <article class="ext">
+            <h2>Extra murals and Awards</h2>
+            <p>The extra curricular activities I used to do at school include</p>
+
+            <div class="mural">
+                <div class="act act1"><p>Debating</p></div>
+                <div class="act act2"><p>Public speaking</p></div>
+                <div class="act act3"><p>Chess</p></div>
+                <div class="act act4"><p>Basketball</p></div>
+            </div>
+            </article>
+            <!--Extra murals-->
+            <!--Awards-->
+            <article class="Awards">
+            <p>
+                These are some of the awards i have recived across my schooling
+                journey.
+            </p>
+            <br />
+            <div class="wins">
+                <ul>
+                <div class="award num1"><li>Highest in IT</li></div>
+                <div class="award num2"><li>Top 10 in CAT</li></div>
+                <div class="award num3">
+                    <li>Won gold in a writing competion</li>
+                </div>
+                </ul>
+            </div>
+            </article>
+            <!--Awards-->
+        </section>
+
+        <section id="interests">
+            <article class="Int">
+            <h2>Interest</h2>
+            <div class="int">
+                <p>My interest include:</p>
+                <br />
+                <ul>
                 <li>Photography</li>
                 <li>Agriculture</li>
                 <li>Gaming</li>
                 <li>Reading</li>
                 <li>Coding</li>
-            </ul>
-          </div>
-        </article>
-      </section>
+                </ul>
+            </div>
+            </article>
+        </section>
 
-      <footer>
-        <div class="contact">
+        <footer>
+            <div class="contact">
             <h2>Contact me</h2>
             <form>
-               <input type="text" class="input" placeholder="Name" >
-               <input type="text" class="input" placeholder="Surname" >
-               <input type="email" class="input" placeholder="Email"  required>
-               <input type="text" class="input" placeholder="Subject" >
-               <textarea type="text" class="area" placeholder="Enter your message"></textarea>
-               <br>
-                <input type="submit" class="btn">
+                <input type="text" class="input" placeholder="Name" />
+                <input type="text" class="input" placeholder="Surname" />
+                <input type="email" class="input" placeholder="Email" required />
+                <input type="text" class="input" placeholder="Subject" />
+                <textarea
+                type="text"
+                class="area"
+                placeholder="Enter your message"
+                ></textarea>
+                <br />
+                <input type="submit" class="btn" />
             </form>
 
             <div class="social">
-
+                <a href="https://github.com/Cheese-20" target="_blank"
+                ><img src="./images/git.png"
+                /></a>
             </div>
-        </div>
-      </footer>
-    </main>
+            </div>
+        </footer>
+        </main>
   </body>
 </html>
