edited the nav bar by adding a hover effect

--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
     <!--Header-->
         <header id="head">
             <nav class="navbar">
-                <a href="#Education">Education</a>
-                <a href="#Experience">Experience</a>
-                <a href="#Skill">Skills</a>
-                <a href="#contact">Contact</a>
+                <ul>
+                    <li class="right"><a href="#Education">Education</a></li>
+                    <li class="right"><a href="#Experience">Activities</a></li>
+                    <li class="right"><a href="#Skill">Interest</a></li>
+                    <li class="right"><a href="#contact">Contact</a></li>
+                 </ul>
+                    
             </nav>
              <div class="head header">
                  <h1>Sibusiso Gamane</h1>
