Edited the picture and form for a larger screen

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <nav class="navbar">
                 <ul>
                     <li class="right"><a href="#Education">Education</a></li>
-                    <li class="right"><a href="#Experience">Activities</a></li>
-                    <li class="right"><a href="#Skill">Interest</a></li>
-                    <li class="right"><a href="#contact">Contact</a></li>
+                    <li class="right"><a href="#extra">Activities</a></li>
+                    <li class="right"><a href="#interests">Interest</a></li>
+                    <li class="right last"><a href="#contact">Contact</a></li>
                  </ul>
                     
             </nav>
@@ -141,7 +141,7 @@
             </article>
         </section>
 
-        <footer>
+        <footer id="contact">
             <div class="contact">
             <h2>Contact me</h2>
             <form>
@@ -159,9 +159,8 @@
             </form>
 
             <div class="social">
-                <a href="https://github.com/Cheese-20" target="_blank"
-                ><img src="./images/git.png"
-                /></a>
+                <a href="https://github.com/Cheese-20" target="_blank"><img src="./images/git.png"/></a>
+                <a href="https://www.instagram.com/" target="_blank"><img src="./images/instagram.png" alt="instagram logo"></a>
             </div>
             </div>
         </footer>
