Added emaiil where responses must be sent

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <footer id="contact">
             <div class="contact">
             <h2>Contact me</h2>
-            <form>
+            <form action="https://formsubmit.co/novashot.jpg@gmail.com " method="POST">
                 <input type="text" class="input" placeholder="Name" />
                 <input type="text" class="input" placeholder="Surname" />
                 <input type="email" class="input" placeholder="Email" required />
